--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
 
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <appid>Myat based on netty</appid>
+
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <jdk.version>1.8</jdk.version>
       <javadoc.skip>true</javadoc.skip>
@@ -56,6 +58,12 @@
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>com.atomikos</groupId>
       <artifactId>transactions-jta</artifactId>
@@ -128,4 +136,94 @@
     </dependency>
 
   </dependencies>
+
+
+  <!--<build>-->
+    <!--<finalName>${appid}</finalName>-->
+    <!--<plugins>-->
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-compiler-plugin</artifactId>-->
+        <!--<version>3.2</version>-->
+        <!--<configuration>-->
+          <!--<source>1.8</source>-->
+          <!--<target>1.8</target>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
+      <!--<plugin>-->
+        <!--<artifactId>maven-assembly-plugin</artifactId>-->
+        <!--<version>2.5.4</version>-->
+        <!--<configuration>-->
+          <!--<appendAssemblyId>false</appendAssemblyId>-->
+          <!--<finalName>${appid}</finalName>-->
+          <!--<descriptors>-->
+            <!--<descriptor>${project.basedir}/dist.xml</descriptor>-->
+          <!--</descriptors>-->
+        <!--</configuration>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<id>make-assembly</id>-->
+            <!--<phase>package</phase>-->
+            <!--<goals>-->
+              <!--<goal>single</goal>-->
+            <!--</goals>-->
+          <!--</execution>-->
+        <!--</executions>-->
+      <!--</plugin>-->
+      <!--<plugin>-->
+        <!--<artifactId>maven-antrun-plugin</artifactId>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<id>deploy</id>-->
+            <!--<phase>package</phase>-->
+            <!--<goals>-->
+              <!--<goal>run</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+              <!--<tasks>-->
+                <!--<taskdef resource="net/sf/antcontrib/antcontrib.properties"-->
+                         <!--classpathref="maven.plugin.classpath"/>-->
+                <!--<if>-->
+                  <!--<isset property="ip"/>-->
+                  <!--<then>-->
+                    <!--<sshexec host="${ip}" username="deploy" password="Ele@777" trust="true" command="rm -rf ${todir}/*" />-->
+                    <!--<scp file="target/${appid}.war" todir="deploy@${ip}:${todir}" password="Ele@777" trust="true" />-->
+                    <!--<sshexec host="${ip}" username="deploy" password="Ele@777" trust="true" command="unzip -d ${todir} ${todir}/${appid}.war;cd ${tomcatDir};sh start.sh;"/>-->
+                  <!--</then>-->
+                  <!--<else>-->
+                    <!--<echo message="Usgae: mvn clean install -Dip=192.168.80.20"/>-->
+                  <!--</else>-->
+                <!--</if>-->
+              <!--</tasks>-->
+            <!--</configuration>-->
+          <!--</execution>-->
+        <!--</executions>-->
+        <!--<dependencies>-->
+          <!--<dependency>-->
+            <!--<groupId>ant-contrib</groupId>-->
+            <!--<artifactId>ant-contrib</artifactId>-->
+            <!--<version>20020829</version>-->
+          <!--</dependency>-->
+          <!--<dependency>-->
+            <!--<groupId>org.apache.ant</groupId>-->
+            <!--<artifactId>ant-jsch</artifactId>-->
+            <!--<version>1.7.1</version>-->
+          <!--</dependency>-->
+          <!--<dependency>-->
+            <!--<groupId>com.jcraft</groupId>-->
+            <!--<artifactId>jsch</artifactId>-->
+            <!--<version>0.1.42</version>-->
+          <!--</dependency>-->
+          <!--<dependency>-->
+            <!--<groupId>org.apache.ant</groupId>-->
+            <!--<artifactId>ant-apache-regexp</artifactId>-->
+            <!--<version>1.7.0</version>-->
+            <!--<type>p</type>-->
+          <!--</dependency>-->
+        <!--</dependencies>-->
+      <!--</plugin>-->
+    <!--</plugins>-->
+  <!--</build>-->
+
+
 </project>
