bugfix yaml support for user config

--- a/src/test/resources/user.yaml
+++ b/src/test/resources/user.yaml
@@ -1,3 +1,4 @@
+!!org.mycat.netty.mysql.auth.YamlPrivilege
 users:
   laoshan: {password: xujianhai, readOnly: true, schemas: 'schema,testdb'}
   user: {password: xujianhai, readOnly: true, schemas: 'schema,testdb'}
