--- a/pom.xml
+++ b/pom.xml
@@ -142,11 +142,11 @@
       <version>1.15</version>
     </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>com.moandjiezana.toml</groupId>-->
-      <!--<artifactId>toml4j</artifactId>-->
-      <!--<version>0.7.1</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>com.moandjiezana.toml</groupId>
+      <artifactId>toml4j</artifactId>
+      <version>0.7.1</version>
+    </dependency>
 
     <dependency>
       <groupId>org.projectlombok</groupId>
