--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,15 @@
       <javadoc.skip>true</javadoc.skip>
       <license.skip>true</license.skip>
 
-      <netty.version>4.0.33.Final</netty.version>
+      <!--<netty.version>4.0.33.Final</netty.version>-->
+      <netty.version>4.1.4.Final</netty.version>
       <slf4j.version>1.7.13</slf4j.version>
       <logback.version>1.1.3</logback.version>
       <guava.version>19.0</guava.version>
       <junit.version>4.11</junit.version>
+
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <developers>
