--- a/pom.xml
+++ b/pom.xml
@@ -1,296 +1,295 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.mycat.netty</groupId>
-  <artifactId>mycat</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>org.mycat.netty</groupId>
+    <artifactId>mycat</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>mycat</name>
-  <url>http://maven.apache.org</url>
-
-
+    <name>mycat</name>
+    <url>http://maven.apache.org</url>
 
 
+    <properties>
+        <appid>Myat based on netty</appid>
 
-  <properties>
-      <appid>Myat based on netty</appid>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jdk.version>1.8</jdk.version>
+        <javadoc.skip>true</javadoc.skip>
+        <license.skip>true</license.skip>
 
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <jdk.version>1.8</jdk.version>
-      <javadoc.skip>true</javadoc.skip>
-      <license.skip>true</license.skip>
+        <!--<netty.version>4.0.33.Final</netty.version>-->
+        <netty.version>4.1.4.Final</netty.version>
+        <slf4j.version>1.7.13</slf4j.version>
+        <logback.version>1.1.3</logback.version>
+        <guava.version>19.0</guava.version>
+        <junit.version>4.11</junit.version>
 
-      <!--<netty.version>4.0.33.Final</netty.version>-->
-      <netty.version>4.1.4.Final</netty.version>
-      <slf4j.version>1.7.13</slf4j.version>
-      <logback.version>1.1.3</logback.version>
-      <guava.version>19.0</guava.version>
-      <junit.version>4.11</junit.version>
+        <powermock.version>1.6.5</powermock.version>
 
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
-  <developers>
-    <developer>
-      <id>snow4young</id>
-      <name>snow4young</name>
-      <email>snow4young@gmail.com</email>
-    </developer>
-  </developers>
+    <developers>
+        <developer>
+            <id>snow4young</id>
+            <name>snow4young</name>
+            <email>snow4young@gmail.com</email>
+        </developer>
+    </developers>
 
-  <scm>
-    <url>https://github.com/xujianhai/mycat-netty.git</url>
-    <connection>scm:git:https://github.com/openddal/openddal.gi</connection>
-  </scm>
+    <scm>
+        <url>https://github.com/xujianhai/mycat-netty.git</url>
+        <connection>scm:git:https://github.com/openddal/openddal.gi</connection>
+    </scm>
 
-  <licenses>
-    <license>
-      <name>Apache 2</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-      <comments>A business-friendly OSS license</comments>
-    </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>Apache 2</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
 
-  <dependencies>
-    <!-- logging -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
+    <dependencies>
+        <!-- logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>${logback.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
 
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback.version}</version>
-    </dependency>
-    <!-- end of logging -->
-
-
-
-
-    <dependency>
-      <groupId>com.atomikos</groupId>
-      <artifactId>transactions-jta</artifactId>
-      <version>3.9.3</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-dbcp</groupId>
-      <artifactId>commons-dbcp</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.29</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.4.190</version>
-      <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <!-- end of logging -->
 
 
+        <dependency>
+            <groupId>com.atomikos</groupId>
+            <artifactId>transactions-jta</artifactId>
+            <version>3.9.3</version>
+            <scope>test</scope>
+        </dependency>
 
-    <!-- util relation -->
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.10</version>
-    </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.29</version>
+            <scope>test</scope>
+        </dependency>
 
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.5</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>19.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.16.4</version>
-    </dependency>
-    <!-- end of util relation -->
-
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.190</version>
+            <scope>test</scope>
+        </dependency>
 
 
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
-      <version>${netty.version}</version>
-    </dependency>
+        <!-- util relation -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.4</version>
+        </dependency>
+        <!-- end of util relation -->
 
 
-    <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>druid</artifactId>
-      <version>1.0.24</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.codehaus.janino</groupId>
-      <artifactId>janino</artifactId>
-      <version>2.6.1</version>
-    </dependency>
-
-    <!-- config file type -->
-    <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
-      <version>1.15</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.moandjiezana.toml</groupId>
-      <artifactId>toml4j</artifactId>
-      <version>0.7.1</version>
-    </dependency>
-    <!-- end of config file type -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
+        </dependency>
 
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.24</version>
+        </dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-      <version>${junit.version}</version>
-    </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>2.6.1</version>
+        </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>junit</groupId>-->
-      <!--<artifactId>junit</artifactId>-->
-      <!--<version>4.12</version>-->
-      <!--<scope>test</scope>-->
-    <!--</dependency>-->
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
-      <scope>test</scope>
-    </dependency>
+        <!-- config file type -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.15</version>
+        </dependency>
 
-
+        <dependency>
+            <groupId>com.moandjiezana.toml</groupId>
+            <artifactId>toml4j</artifactId>
+            <version>0.7.1</version>
+        </dependency>
+        <!-- end of config file type -->
 
 
-  </dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+            <version>${junit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
 
 
-  <!--<build>-->
+    </dependencies>
+
+
+    <!--<build>-->
     <!--<finalName>${appid}</finalName>-->
     <!--<plugins>-->
-      <!--<plugin>-->
-        <!--<groupId>org.apache.maven.plugins</groupId>-->
-        <!--<artifactId>maven-compiler-plugin</artifactId>-->
-        <!--<version>3.2</version>-->
-        <!--<configuration>-->
-          <!--<source>1.8</source>-->
-          <!--<target>1.8</target>-->
-        <!--</configuration>-->
-      <!--</plugin>-->
-      <!--<plugin>-->
-        <!--<artifactId>maven-assembly-plugin</artifactId>-->
-        <!--<version>2.5.4</version>-->
-        <!--<configuration>-->
-          <!--<appendAssemblyId>false</appendAssemblyId>-->
-          <!--<finalName>${appid}</finalName>-->
-          <!--<descriptors>-->
-            <!--<descriptor>${project.basedir}/dist.xml</descriptor>-->
-          <!--</descriptors>-->
-        <!--</configuration>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<id>make-assembly</id>-->
-            <!--<phase>package</phase>-->
-            <!--<goals>-->
-              <!--<goal>single</goal>-->
-            <!--</goals>-->
-          <!--</execution>-->
-        <!--</executions>-->
-      <!--</plugin>-->
-      <!--<plugin>-->
-        <!--<artifactId>maven-antrun-plugin</artifactId>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<id>deploy</id>-->
-            <!--<phase>package</phase>-->
-            <!--<goals>-->
-              <!--<goal>run</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-              <!--<tasks>-->
-                <!--<taskdef resource="net/sf/antcontrib/antcontrib.properties"-->
-                         <!--classpathref="maven.plugin.classpath"/>-->
-                <!--<if>-->
-                  <!--<isset property="ip"/>-->
-                  <!--<then>-->
-                    <!--<sshexec host="${ip}" username="deploy" password="Ele@777" trust="true" command="rm -rf ${todir}/*" />-->
-                    <!--<scp file="target/${appid}.war" todir="deploy@${ip}:${todir}" password="Ele@777" trust="true" />-->
-                    <!--<sshexec host="${ip}" username="deploy" password="Ele@777" trust="true" command="unzip -d ${todir} ${todir}/${appid}.war;cd ${tomcatDir};sh start.sh;"/>-->
-                  <!--</then>-->
-                  <!--<else>-->
-                    <!--<echo message="Usgae: mvn clean install -Dip=192.168.80.20"/>-->
-                  <!--</else>-->
-                <!--</if>-->
-              <!--</tasks>-->
-            <!--</configuration>-->
-          <!--</execution>-->
-        <!--</executions>-->
-        <!--<dependencies>-->
-          <!--<dependency>-->
-            <!--<groupId>ant-contrib</groupId>-->
-            <!--<artifactId>ant-contrib</artifactId>-->
-            <!--<version>20020829</version>-->
-          <!--</dependency>-->
-          <!--<dependency>-->
-            <!--<groupId>org.apache.ant</groupId>-->
-            <!--<artifactId>ant-jsch</artifactId>-->
-            <!--<version>1.7.1</version>-->
-          <!--</dependency>-->
-          <!--<dependency>-->
-            <!--<groupId>com.jcraft</groupId>-->
-            <!--<artifactId>jsch</artifactId>-->
-            <!--<version>0.1.42</version>-->
-          <!--</dependency>-->
-          <!--<dependency>-->
-            <!--<groupId>org.apache.ant</groupId>-->
-            <!--<artifactId>ant-apache-regexp</artifactId>-->
-            <!--<version>1.7.0</version>-->
-            <!--<type>p</type>-->
-          <!--</dependency>-->
-        <!--</dependencies>-->
-      <!--</plugin>-->
+    <!--<plugin>-->
+    <!--<groupId>org.apache.maven.plugins</groupId>-->
+    <!--<artifactId>maven-compiler-plugin</artifactId>-->
+    <!--<version>3.2</version>-->
+    <!--<configuration>-->
+    <!--<source>1.8</source>-->
+    <!--<target>1.8</target>-->
+    <!--</configuration>-->
+    <!--</plugin>-->
+    <!--<plugin>-->
+    <!--<artifactId>maven-assembly-plugin</artifactId>-->
+    <!--<version>2.5.4</version>-->
+    <!--<configuration>-->
+    <!--<appendAssemblyId>false</appendAssemblyId>-->
+    <!--<finalName>${appid}</finalName>-->
+    <!--<descriptors>-->
+    <!--<descriptor>${project.basedir}/dist.xml</descriptor>-->
+    <!--</descriptors>-->
+    <!--</configuration>-->
+    <!--<executions>-->
+    <!--<execution>-->
+    <!--<id>make-assembly</id>-->
+    <!--<phase>package</phase>-->
+    <!--<goals>-->
+    <!--<goal>single</goal>-->
+    <!--</goals>-->
+    <!--</execution>-->
+    <!--</executions>-->
+    <!--</plugin>-->
+    <!--<plugin>-->
+    <!--<artifactId>maven-antrun-plugin</artifactId>-->
+    <!--<executions>-->
+    <!--<execution>-->
+    <!--<id>deploy</id>-->
+    <!--<phase>package</phase>-->
+    <!--<goals>-->
+    <!--<goal>run</goal>-->
+    <!--</goals>-->
+    <!--<configuration>-->
+    <!--<tasks>-->
+    <!--<taskdef resource="net/sf/antcontrib/antcontrib.properties"-->
+    <!--classpathref="maven.plugin.classpath"/>-->
+    <!--<if>-->
+    <!--<isset property="ip"/>-->
+    <!--<then>-->
+    <!--<sshexec host="${ip}" username="deploy" password="Ele@777" trust="true" command="rm -rf ${todir}/*" />-->
+    <!--<scp file="target/${appid}.war" todir="deploy@${ip}:${todir}" password="Ele@777" trust="true" />-->
+    <!--<sshexec host="${ip}" username="deploy" password="Ele@777" trust="true" command="unzip -d ${todir} ${todir}/${appid}.war;cd ${tomcatDir};sh start.sh;"/>-->
+    <!--</then>-->
+    <!--<else>-->
+    <!--<echo message="Usgae: mvn clean install -Dip=192.168.80.20"/>-->
+    <!--</else>-->
+    <!--</if>-->
+    <!--</tasks>-->
+    <!--</configuration>-->
+    <!--</execution>-->
+    <!--</executions>-->
+    <!--<dependencies>-->
+    <!--<dependency>-->
+    <!--<groupId>ant-contrib</groupId>-->
+    <!--<artifactId>ant-contrib</artifactId>-->
+    <!--<version>20020829</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--<groupId>org.apache.ant</groupId>-->
+    <!--<artifactId>ant-jsch</artifactId>-->
+    <!--<version>1.7.1</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--<groupId>com.jcraft</groupId>-->
+    <!--<artifactId>jsch</artifactId>-->
+    <!--<version>0.1.42</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--<groupId>org.apache.ant</groupId>-->
+    <!--<artifactId>ant-apache-regexp</artifactId>-->
+    <!--<version>1.7.0</version>-->
+    <!--<type>p</type>-->
+    <!--</dependency>-->
+    <!--</dependencies>-->
+    <!--</plugin>-->
     <!--</plugins>-->
-  <!--</build>-->
+    <!--</build>-->
 
 
 </project>
