--- a/pom.xml
+++ b/pom.xml
@@ -103,12 +103,12 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.190</version>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.h2database</groupId>-->
+        <!--<artifactId>h2</artifactId>-->
+        <!--<version>1.4.190</version>-->
+        <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
 
         <!-- util relation -->
@@ -172,6 +172,7 @@
         <!-- end of config file type -->
 
 
+        <!-- test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -200,6 +201,21 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <version>2.4.6</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.171</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- end of test -->
 
     </dependencies>
 
