--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.wix</groupId>
+            <artifactId>wix-embedded-mysql</artifactId>
+            <version>2.0.1</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- end of test -->
 
     </dependencies>
